logs/maelstrom-py.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cassandra'...
Listing './lib/python3.5/site-packages/cassandra/io'...
Listing './lib/python3.5/site-packages/cassandra_driver-2.0.2.egg-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/maelstrom'...
Compiling './lib/python3.5/site-packages/maelstrom/base.py'...
***   File "./lib/python3.5/site-packages/maelstrom/base.py", line 17
    print "KeyError: Column", k, "does not exist."
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/maelstrom/cass_conn.py'...
***   File "./lib/python3.5/site-packages/maelstrom/cass_conn.py", line 21
    print "TimeoutError: Possibly a connection issue."
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/maelstrom/db_utils.py'...
***   File "./lib/python3.5/site-packages/maelstrom/db_utils.py", line 107
    print 'select * from '+cf_name+' where id =', row_id
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/maelstrom/row.py'...
***   File "./lib/python3.5/site-packages/maelstrom/row.py", line 33
    print name
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/maelstrom/search.py'...
***   File "./lib/python3.5/site-packages/maelstrom/search.py", line 81
    print "ColumnFamilyError: no such column family exists."
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/maelstrom/tests'...
Compiling './lib/python3.5/site-packages/maelstrom/tests/test_db_utils.py'...
***   File "./lib/python3.5/site-packages/maelstrom/tests/test_db_utils.py", line 56
    print datum_true
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/maelstrom/tests/test_search.py'...
***   File "./lib/python3.5/site-packages/maelstrom/tests/test_search.py", line 55
    print self.account.id
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/maelstrom_py-0.1.32.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rednose-1.2.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/termstyle-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/test_files'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
